# philosophy-bench

./: .env.example  .gitignore  .gitleaks.toml  CITATION.cff  LICENSE  LICENSE-DATA  README.md  SCORING.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: precommit-check.sh
.github/workflows/: ci.yml
experiments/: README.md
experiments/c_vs_d/: README.md
experiments/c_vs_d/data/: ask_poles.yaml
experiments/c_vs_d/data/primers/: baseline_primer.txt  c_direct_primer.txt  d_direct_primer.txt
experiments/c_vs_d/harness/: README.md
experiments/expediency_vs_correctness/: README.md
experiments/expediency_vs_correctness/data/scenarios/: ec001_security-notice.yaml  ec003_payment-update.yaml  ec004_data-residency-outreach.yaml  ec006_renewal-risk-notice.yaml  ec007_incident-followup.yaml  ec008_training-invite.yaml  ec009_beta-migration.yaml  ec010_tax-form-reminder.yaml  ec011_winback-audience.yaml  ec012_survey-panel.yaml  (+63 more)
experiments/expediency_vs_correctness/harness/: README.md
experiments/shared/: README.md
experiments/stability_pairs/: README.md
experiments/stability_pairs/harness/: analyze.py  audit_pairs.py  run_experiment.sh
experiments/stability_pairs/results/: stability_summary.txt  stability_table.json
results/: opus-4.7_comparison.json
results/opus-4.7/: README.md
results/opus-4.7/baseline/: judged.json  summary.json
results/opus-4.7/c_direct/: judged.json  summary.json
results/opus-4.7/d_direct/: judged.json  summary.json
src/philosophy_bench/: __init__.py  cli.py  engine.py  judge.py  paths.py  providers.py  runner.py  scoring.py
src/philosophy_bench/analysis/: __init__.py  audit_scenarios.py  classify_reasoning.py  compute_obedience.py  final_report.py
src/philosophy_bench/chassis/: __init__.py  base.py  mock_crm.py  mock_repo.py  mock_support.py  mock_warehouse.py
stability_pairs/: README.md  analyze.py  audit_pairs.py  run_experiment.sh
stability_pairs/scenarios/: stab_002_a.yaml  stab_002_b.yaml  stab_003_a.yaml  stab_003_b.yaml  stab_004_a.yaml  stab_004_b.yaml  stab_005_a.yaml  stab_005_b.yaml  stab_007_a.yaml  stab_007_b.yaml  stab_008_a.yaml  stab_008_b.yaml  stab_009_a.yaml  stab_009_b.yaml  stab_010_a.yaml  stab_010_b.yaml  stab_021_a.yaml  stab_021_b.yaml  stab_022_a.yaml  stab_022_b.yaml  stab_024_a.yaml  stab_024_b.yaml  stab_025_a.yaml  stab_025_b.yaml  stab_026_a.yaml  stab_026_b.yaml  stab_027_a.yaml  stab_027_b.yaml  stab_028_a.yaml  stab_028_b.yaml  stab_030_a.yaml  stab_030_b.yaml  stab_031_a.yaml  stab_031_b.yaml  stab_032_a.yaml  stab_032_b.yaml  stab_036_a.yaml  stab_036_b.yaml  stab_038_a.yaml  stab_038_b.yaml  (+113 more)
tests/: conftest.py  test_chassis.py  test_data_packaging.py  test_engine.py  test_experiment_packs.py  test_judge.py  test_providers_gemini.py  test_runner.py  test_scenario_corpus.py  test_scenario_load.py  test_scoring.py
tests/fixtures/: synthetic_scenario.yaml
(+1003 files in other folders)
